--- a/index.html
+++ b/index.html
@@ -10,12 +10,18 @@
   	<!--for Favicon-->
   	<link rel="shortcut icon" type="image/png" href="https://img.techpowerup.org/200517/prodipto.png">
   	<!--for CSS-->
-  	<link rel="stylesheet" type="text/css" href="netflixstyles.css">
+  	<link rel="stylesheet" type="text/css" href="styles.css">
 	<!--link rel="stylesheet" href="https://www.w3schools.com/lib/w3.css"/ -->
 </head>
 
 <body>
 	<header class="showcase">
+		<div class="topnav">
+			<a class="active" href="#home">Hjem</a>
+			<a href="#news">Om oss</a>
+			<a href="#contact">Om Marius Vik</a>
+			<a href="#about">Hvordan bli fremoverlent</a>
+		</div>
 		
 		<div class="showcase-content" >
 			<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
@@ -27,6 +33,7 @@
 			<h2>IDRETTSGLEDE OG KAMERATSKAP </h2>
 			<br><br><br><br><br><br><br><br><br><br>
 			<h4>Denne nettsiden er under utvikling. Stay tuned!</h4>
+			<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 		</div>
 	</header>
 
