--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<!--for making the website more responsive-->
   	<meta http-equiv="X-UA-compatible" content="ie=">
   	<!--for Favicon-->
-  	<link rel="shortcut icon" type="image/png" href="https://img.techpowerup.org/200517/prodipto.png">
+  	<link rel="shortcut icon" type="image/png" href="images/icons8-soccer-ball-16.png">
   	<!--for CSS-->
   	<link rel="stylesheet" type="text/css" href="styles.css">
 	<!--link rel="stylesheet" href="https://www.w3schools.com/lib/w3.css"/ -->
