--- a/index.html
+++ b/index.html
@@ -16,6 +16,20 @@
 
 <body>
 	<header class="showcase">
+
+		<!-- Load an icon library to show a hamburger menu (bars) on small screens -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+		<div class="topnav" id="myTopnav">
+  			<a href="#hjem" class="active">Hjem</a>
+  			<a href="#omoss">Om oss</a>
+  			<a href="#julecup">Julecup</a>
+  			<a href="#tundracup">Tundracup</a>
+			<a href="#epilepsi">Forskning på epilepsi</a>
+  			<a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    		<i class="fa fa-bars"></i>
+  			</a>
+		</div>
 		
 		<div class="showcase-content" >
 			<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
