--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 		<div class="topnav" id="myTopnav">
-  			<a href="#hjem" class="active">Hjem</a>
-  			<a href="#omoss">Om oss</a>
-  			<a href="#julecup">Julecup</a>
-  			<a href="#tundracup">Tundracup</a>
-			<a href="#epilepsi">Forskning på epilepsi</a>
+  			<a href="index.html" class="active">Hjem</a>
+  			<a href="omoss.html">Om oss</a>
+  			<a href="julecup.html">Julecup</a>
+  			<a href="tundracup.html">Tundracup</a>
+			<a href="epilepsi.html">Forskning på epilepsi</a>
   			<a href="javascript:void(0);" class="icon" onclick="myFunction()">
     		<i class="fa fa-bars"></i>
   			</a>
