--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <!--========== CSS ==========-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <title>Responsive website food</title>
+        <title>Dala-Fram Test</title>
     </head>
     <body>
 
@@ -22,15 +22,15 @@
         <!--========== HEADER ==========-->
         <header class="l-header" id="header">
             <nav class="nav bd-container">
-                <a href="#" class="nav__logo">Dala-Fram</a>
+                <a>Dala-Fram</a>
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item"><a href="#home" class="nav__link active-link">Hjem</a></li>
                         <li class="nav__item"><a href="#about" class="nav__link">Om oss</a></li>
-                        <li class="nav__item"><a href="#services" class="nav__link">Services</a></li>
-                        <li class="nav__item"><a href="#menu" class="nav__link">Menu</a></li>
-                        <li class="nav__item"><a href="#contact" class="nav__link">Contact us</a></li>
+                        <li class="nav__item"><a href="#services" class="nav__link">Julecup</a></li>
+                        <!--<li class="nav__item"><a href="#menu" class="nav__link">Tundracup</a></li>-->
+                        <li class="nav__item"><a href="#contact" class="nav__link">Forkning på epilepsi</a></li>
 
                         <li><i class='bx bx-moon change-theme' id="theme-button"></i></li>
                     </ul>
@@ -52,7 +52,7 @@
                        <!-- <a href="#" class="button">View Menu</a> -->
                     </div>
     
-                    <img src="assets/img/fotba.jpg" alt="" class="home__img">
+                    <img src="assets/img/logo_dalafram.png" alt="" class="home__img">
                 </div>
             </section>
             
@@ -60,20 +60,20 @@
             <section class="about section bd-container" id="about">
                 <div class="about__container  bd-grid">
                     <div class="about__data">
-                        <span class="section-subtitle about__initial">Om oss</span>
-                        <h2 class="section-title about__initial">We cook the best <br> tasty food</h2>
-                        <p class="about__description">We cook the best food in the entire city, with excellent customer service, the best meals and at the best price, visit us.</p>
+                        <!--<span class="section-subtitle about__initial">Om oss</span>-->
+                        <h2 class="section-title about__initial">Kjøyr</h2>
+                        <p class="about__description">Vi er en gjeng med legender. Er jo det. <br> Vi vant Næscup i 2022. Gjorde jo det. <br> Vi er en gjeng med legender. Er jo det. <br> Vi er en gjeng med legender. Er jo det. <br> Vi er en gjeng med legender. Er jo det. <br> Vi er en gjeng med legender. Er jo det.</p>
                         <a href="#" class="button">Explore history</a>
                     </div>
 
-                    <img src="assets/img/about.jpg" alt="" class="about__img">
+                    <img src="assets/img/nescup.png" alt="" style="width:1200px;height:400px;" class="about__img">
                 </div>
             </section>
 
             <!--========== SERVICES ==========-->
             <section class="services section bd-container" id="services">
-                <span class="section-subtitle">Offering</span>
-                <h2 class="section-title">Our amazing services</h2>
+                <!--<span class="section-subtitle">Offering</span>-->
+                <h2 class="section-title">Julecup</h2>
 
                 <div class="services__container  bd-grid">
                     <div class="services__content">
@@ -357,10 +357,10 @@
                 </div>
             </section>
 
-            <!--========== MENU ==========-->
-            <section class="menu section bd-container" id="menu">
+            <!--========== TUNDRACUP ==========-->
+            <!--<section class="menu section bd-container" id="menu">
                 <span class="section-subtitle">Special</span>
-                <h2 class="section-title">Menu of the week</h2>
+                <h2 class="section-title">Tundracup</h2>
 
                 <div class="menu__container bd-grid">
                     <div class="menu__content">
@@ -387,55 +387,55 @@
                         <a href="#" class="button menu__button"><i class='bx bx-cart-alt'></i></a>
                     </div>
                 </div>
-            </section>
-
-            <!--===== APP =======-->
-            <section class="app section bd-container">
-                <div class="app__container bd-grid">
-                    <div class="app__data">
-                        <span class="section-subtitle app__initial">App</span>
-                        <h2 class="section-title app__initial">App is aviable</h2>
-                        <p class="app__description">Find our application and download it, you can make reservations, food orders, see your deliveries on the way and much more.</p>
-                        <div class="app__stores">
-                            <a href="#"><img src="assets/img/app1.png" alt="" class="app__store"></a>
-                            <a href="#"><img src="assets/img/app2.png" alt="" class="app__store"></a>
-                        </div>
-                    </div>
-
-                    <img src="assets/img/movil-app.png" alt="" class="app__img">
-                </div>
-            </section>
+            </section>-->
 
             <!--========== CONTACT US ==========-->
             <section class="contact section bd-container" id="contact">
                 <div class="contact__container bd-grid">
                     <div class="contact__data">
-                        <span class="section-subtitle contact__initial">Let's talk</span>
-                        <h2 class="section-title contact__initial">Contact us</h2>
+                        <!--<span class="section-subtitle contact__initial">Let's talk</span>-->
+                        <h2 class="section-title contact__initial">Forskning på epilepsi</h2>
                         <p class="contact__description">If you want to reserve a table in our restaurant, contact us and we will attend you quickly, with our 24/7 chat service.</p>
                     </div>
 
                     <div class="contact__button">
-                        <a href="#" class="button">Contact us now</a>
+                        <a href="#" class="button">Les mer her</a>
                     </div>
                 </div>
             </section>
         </main>
 
+        <!--===== APP =======-->
+        <section class="app section bd-container">
+            <div class="app__container bd-grid">
+                <div class="app__data">
+                    <span class="section-subtitle app__initial">App</span>
+                    <h2 class="section-title app__initial">App is aviable</h2>
+                    <p class="app__description">Find our application and download it, you can make reservations, food orders, see your deliveries on the way and much more.</p>
+                    <div class="app__stores">
+                        <a href="#"><img src="assets/img/app1.png" alt="" class="app__store"></a>
+                        <a href="#"><img src="assets/img/app2.png" alt="" class="app__store"></a>
+                    </div>
+                </div>
+
+                <img src="assets/img/movil-app.png" alt="" class="app__img">
+            </div>
+        </section>
+
         <!--========== FOOTER ==========-->
         <footer class="footer section bd-container">
             <div class="footer__container bd-grid">
                 <div class="footer__content">
-                    <a href="#" class="footer__logo">Tasty Food</a>
-                    <span class="footer__description">Restaurant</span>
+                    <a href="#" class="footer__logo">DALA-FRAM IF</a>
+                    <span class="footer__description">Org.nr.: 925505668 <br> Nordåsvegen 79 <br> 2387 Brumunddal</span>
                     <div>
-                        <a href="#" class="footer__social"><i class='bx bxl-facebook'></i></a>
-                        <a href="#" class="footer__social"><i class='bx bxl-instagram'></i></a>
-                        <a href="#" class="footer__social"><i class='bx bxl-twitter'></i></a>
+                        <!--<a href="#" class="footer__social"><i class='bx bxl-facebook'></i></a>-->
+                        <a href="https://www.instagram.com/dalafram/" class="footer__social"><i class='bx bxl-instagram'></i></a>
+                        <!--<a href="#" class="footer__social"><i class='bx bxl-twitter'></i></a>-->
                     </div>
                 </div>
 
-                <div class="footer__content">
+                <!--<div class="footer__content">
                     <h3 class="footer__title">Services</h3>
                     <ul>
                         <li><a href="#" class="footer__link">Delivery</a></li>
@@ -453,20 +453,20 @@
                         <li><a href="#" class="footer__link">Privacy policy</a></li>
                         <li><a href="#" class="footer__link">Terms of services</a></li>
                     </ul>
-                </div>
+                </div>-->
 
                 <div class="footer__content">
-                    <h3 class="footer__title">Address</h3>
+                    <h3 class="footer__title"></h3>
                     <ul>
-                        <li>Lima - Peru</li>
-                        <li>Jr Union #999</li>
-                        <li>999 - 888 - 777</li>
-                        <li>tastyfood@email.com</li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
                     </ul>
                 </div>
             </div>
 
-            <p class="footer__copy">&#169; 2023 Dala-Fram. All right reserved.</p>
+            <p class="footer__copy">Opphavsrett Dala-Fram &#169; 2023</p>
         </footer>
 
         <!--========== SCROLL REVEAL ==========-->
