--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <h2 class="section-title about__initial">Om oss</h2>
                         <p class="about__description">Vi er en kompisgjeng som vokste opp i Brumunddal. Vi ble kjent gjennom felles skolegang og fotball. Selv om vi i dag bor på forskjellige steder i landet, opprettholder vi kontakten gjennom Dala-Fram IF.</p>
                         <p class="about__description">Kondisen og ballkontrollen er kanskje ikke det den var i glansdagene, men idrettsgleden og kameratskapet står fremdeles sterkt. </p>
-                        <p class="about__description">I 2022 vant vi Næs Cup. I tillegg ble vi seriemestere, og rykket dermed opp, i bedrftsligaen i Oslo. </p>
+                        <p class="about__description">I 2022 vant vi Næs Cup. I tillegg ble vi seriemestere, og rykket dermed opp, i bedriftsligaen i Oslo. </p>
                     </div>
 
                     <img src="assets/img/nescup.png" alt="" class="about__img">
@@ -89,7 +89,7 @@
                     <div class="services__content">
                         <img src="assets/img/icons8-sign-up-50.png" alt="" width="64" height="64" class="services__img">
                         <h3 class="services__title">Påmelding</h3>
-                        <p class="services__description">Påmelding til julecup er for tiden ikke åpen. Når det åpner vil det bli opprettet et arrangement på Facebook, og det blir mulig å melde på et lag ved å trykke på knappen under.</p>
+                        <p class="services__description">Påmelding til julecup er for tiden ikke åpen. Når det åpner vil det bli opprettet et arrangement på Facebook, og det blir mulig å melde på lag ved å trykke på knappen under.</p>
                     </div>
 
                     <div class="services__content">
@@ -158,7 +158,7 @@
                 <div class="app__data">
                     <!--<span class="section-subtitle app__initial">App</span>-->
                     <h2 class="section-title app__initial">Vil du sette oss som din grasrotmottaker?</h2>
-                    <p class="app__description">Visste du at hver femte kunde hos Norsk tipping ikke har valgt noen grasrotmottaker? Er du en av disse, hadde det betydd mye for oss om du kunne satt opp DALA-FRAM IF som din grasrotmottaker. <br><br> Trykk på knappen under og velg <b>Sett som din grasrotmottaker</b>.</p>
+                    <p class="app__description">Visste du at hver femte kunde hos Norsk Tipping ikke har valgt noen grasrotmottaker? Er du en av disse, hadde det betydd mye for oss om du kunne satt opp DALA-FRAM IF som din grasrotmottaker. <br><br> Trykk på knappen under og velg <b>Sett som din grasrotmottaker</b>.</p>
                     <a href="https://www.norsk-tipping.no/grasrotandelen/din-mottaker/925505668" target="_blank" class="button">Trykk her</a>
                     <div class="app__stores">
                         <!--<a href="#"><img src="assets/img/app1.png" alt="" class="app__store"></a>
