--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                         <!--<span class="section-subtitle contact__initial">Let's talk</span>-->
                         <h2 class="section-title contact__initial">Forskning på epilepsi</h2>
                         <p class="contact__description">Vinteren 2014 døde vår gode venn og lagkamerat Martin Hansen etter et epilepsianfall. Vi velger derfor å donere alt overskudd fra turneringer og andre arrangementer til forkning på epilepsi.</p>
-                        <p class="contact__description">Penger donert til forskning: <br><br>Julecup 2022: <b>21 464,52 kr</b> <br> Julecup 2021: <b>  8 414,00 kr</b> <br> Julecup 2019: <b>  5 797,00 kr</b> </p>
+                        <p class="contact__description">Penger donert til forskning: <br><br>Julecup 2022: <b>21 464,52 kr</b> <br> Julecup 2021: <b> &nbsp;&nbsp;&nbsp;8 414,00 kr</b> <br> Julecup 2019: <b> &nbsp;&nbsp;&nbsp;5 797,00 kr</b> </p>
                         <a href="https://www.epilepsi.no/aktuelt/fotballturnering-til-stotte-for-epilepsiforskning/" target="_blank" class="button">Les mer her</a>
                         <p class="contact__description"></p>
                     </div>
@@ -192,7 +192,7 @@
                     <a href="#" class="footer__logo">DALA-FRAM IF</a>
                     <span class="footer__description">Org.nr.: 925505668 <br> Nordåsvegen 79 <br> 2387 Brumunddal</span>
                     <div>
-                        <!--<a href="#" class="footer__social"><i class='bx bxl-facebook'></i></a>-->
+                        <a href="https://www.facebook.com/profile.php?id=100089178859997" target="_blank" class="footer__social"><i class='bx bxl-facebook'></i></a>
                         <a href="https://www.instagram.com/dalafram/" target="_blank" class="footer__social"><i class='bx bxl-instagram'></i></a>
                         <!--<a href="#" class="footer__social"><i class='bx bxl-twitter'></i></a>-->
                     </div>
