--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         </section>
 
         <!--========== SAMARBEIDSPARTNERE ==========-->
-        <section class="services section bd-container" id="services" style="text-align:center">
+        <section class="services section bd-container" id="partners" style="text-align:center">
             <!--<span class="section-subtitle">Offering</span>-->
             <h2 class="section-title">Våre samarbeidspartnere</h2>
             
