Fixed issues with julecup tab

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
-                        <li class="nav__item"><a href="#home" class="nav__link active-link">Hjem</a></li>
-                        <li class="nav__item"><a href="#about" class="nav__link">Om oss</a></li>
-                        <li class="nav__item"><a href="#services" class="nav__link">Julecup</a></li>
+                        <li class="nav__item"><a href="#hjem" class="nav__link active-link">Hjem</a></li>
+                        <li class="nav__item"><a href="#omoss" class="nav__link">Om oss</a></li>
+                        <li class="nav__item"><a href="#julecup" class="nav__link">Julecup</a></li>
                         <!--<li class="nav__item"><a href="#menu" class="nav__link">Tundracup</a></li>-->
-                        <li class="nav__item"><a href="#contact" class="nav__link">Forskning på epilepsi</a></li>
+                        <li class="nav__item"><a href="#forskning" class="nav__link">Forskning på epilepsi</a></li>
 
                         <li><i class='bx bx-moon change-theme' id="theme-button"></i></li>
                     </ul>
@@ -44,7 +44,7 @@
 
         <main class="l-main">
             <!--========== HOME ==========-->
-            <section class="home" id="home">
+            <section class="home" id="hjem">
                 <div class="home__container bd-container bd-grid">
                     <div class="home__data">
                         <h1 class="home__title">Dala-Fram</h1>
@@ -57,7 +57,7 @@
             </section>
             
             <!--========== ABOUT ==========-->
-            <section class="about section bd-container" id="about">
+            <section class="about section bd-container" id="omoss">
                 <div class="about__container  bd-grid">
                     <div class="about__data">
                         <!--<span class="section-subtitle about__initial">Om oss</span>-->
@@ -75,7 +75,7 @@
             </section>
 
             <!--========== JULECUP ==========-->
-            <section class="services section bd-container" id="services" style="text-align:center">
+            <section class="services section bd-container" id="julecup" style="text-align:center">
                 <!--<span class="section-subtitle">Offering</span>-->
                 <h2 class="section-title">Julecup</h2>
                 
@@ -99,7 +99,7 @@
                     </div>
                 </div>
                 <p class="services__description"><br><br></p>
-                <a href="file:///C:/dalafram/test_dalafram/dalafram/index.html#services" class="button">Påmelding er ikke åpent</a>
+                <a href="#" onclick="return false;" class="button">Påmelding er ikke åpent</a>
             </section>
 
             <!--========== TUNDRACUP ==========-->
@@ -135,7 +135,7 @@
             </section>-->
 
             <!--========== FORSNKING PÅ EPILEPSI ==========-->
-            <section class="contact section bd-container" id="contact">
+            <section class="contact section bd-container" id="forskning">
                 <div class="contact__container bd-grid">
                     <div class="contact__data">
                         <!--<span class="section-subtitle contact__initial">Let's talk</span>-->
