--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     <div class="contact__data">
                         <!--<span class="section-subtitle contact__initial">Let's talk</span>-->
                         <h2 class="section-title contact__initial">Forskning på epilepsi</h2>
-                        <p class="contact__description">Vinteren 2014 døde vår gode venn og lagkamerat Martin Hansen etter et epilepsianfall. Vi velger derfor å donere alt overskudd fra turneringer og andre arrangementer til forkning på epilepsi.</p>
+                        <p class="contact__description">Vinteren 2014 døde vår gode venn og lagkamerat Martin Hansen etter et epilepsianfall. Vi velger derfor å donere alt overskudd fra turneringer og andre arrangementer til forskning på epilepsi.</p>
                         <p class="contact__description">Penger donert til forskning: <br><br>Julecup 2022: <b>21 464,52 kr</b> <br> Julecup 2021: <b> &nbsp;&nbsp;&nbsp;8 414,00 kr</b> <br> Julecup 2019: <b> &nbsp;&nbsp;&nbsp;5 797,00 kr</b> </p>
                         <a href="https://www.epilepsi.no/aktuelt/fotballturnering-til-stotte-for-epilepsiforskning/" target="_blank" class="button">Les mer her</a>
                         <p class="contact__description"></p>
