Legge til seier i Næscup 2023

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <h2 class="section-title about__initial">Om oss</h2>
                         <p class="about__description">Vi er en kompisgjeng som vokste opp i Brumunddal. Vi ble kjent gjennom felles skolegang og fotball. Selv om vi i dag bor på forskjellige steder i landet, opprettholder vi kontakten gjennom Dala-Fram IF.</p>
                         <p class="about__description">Kondisen og ballkontrollen er kanskje ikke det den var i glansdagene, men idrettsgleden og kameratskapet står fremdeles sterkt. </p>
-                        <p class="about__description">I 2022 vant vi Næscup. I tillegg ble vi seriemestere, og rykket dermed opp i bedriftsligaen i Oslo. </p>
+                        <p class="about__description">Vi vant Næscup i 2022 og 2023. I tillegg ble vi seriemestere, og rykket dermed opp i bedriftsligaen i Oslo i 2022. </p>
                     </div>
 
                     <img src="assets/img/nescup.png" alt="" class="about__img">
