--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <div class="services__content">
                         <img src="assets/img/icons8-sign-up-50.png" alt="" width="64" height="64" class="services__img">
                         <h3 class="services__title">Påmelding</h3>
-                        <p class="services__description">Påmelding til julecup er for tiden ikke åpen. Når det åpner vil det bli opprettet et arrangement på Facebook, og det blir mulig å melde på lag ved å trykke på knappen under.</p>
+                        <p class="services__description">Påmelding til julecup er åpen! Påmelding skjer ved å sende melding til Torgeir Strand Osmo via Messenger. Få mer info ved å trykke på knappen under.</p>
                     </div>
 
                     <div class="services__content">
@@ -99,7 +99,7 @@
                     </div>
                 </div>
                 <p class="services__description"><br><br></p>
-                <a href="#" onclick="return false;" class="button">Påmelding er ikke åpent</a>
+                <a href="https://www.facebook.com/events/698306162359634" target="_blank" class="button">Trykk her for mer info</a>
             </section>
 
             <!--========== TUNDRACUP ==========-->
